--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="container">
         <!-- Cabeçalho -->
         <div class="header">
-            <h1>Ozzy Osbourne</h1>
+            <h1 class="main-title">Ozzy Osbourne</h1>
             <p class="main-paragraph">Também conhecido como "Principe das Trevas"</p>
         </div>
         <!-- Imágem de destaque -->
         <div class="featured-image">
             <figure>
-                <img src="img/foto_Ozzy2.jpg" alt="Ozzy Osbourne" />
+                <img src="img/fotoOzzy.jpg" alt="Ozzy Osbourne" />
                 <figcaption>Ozzy Osbourne</figcaption>
             </figure>
         </div>
@@ -74,18 +74,18 @@
             <blockquote>
                 "Você vê mais violência em um desenho do Tom & Jerry do que em um show meu. Crianças assistem um rato
                 ter seu cérebro esmagado todos os dias na TV."
-                <p>Ozzy Osbourne</p>
             </blockquote>
+            <p>Ozzy Osbourne</p>
         </div>
         <!-- Curiosidades -->
-        <div class="curiosites-container">
+        <div class="curiosities-container">
             <h1>Curiosidades de Ozzy</h1>
             <ul>
                 <li>Em um de seus shows, Ozzy "comeu" um morcego.</li>
                 <li>Embora não aparentasse, Ozzy era cristão e tinha como costume rezar antes da subir no palco.</li>
-                <li>Em seu ultimo show, que aconteceu no dia 5 de julho de 2025, ozzy arrecadou mais de 190 milhões de
-                    dolares, que foram doados a; Cure Parkinson's fundação especializada na doença da qual Osbourne
-                    sofria, o Birmingham Children's Hospital e o Acorn Children's Hospice.</li>
+                <li>Em seu último show, que aconteceu no dia 5 de julho de 2025, Ozzy arrecadou mais de 190 milhões de
+                    dólares, que foram doados para: a Cure Parkinson's, fundação especializada na doença da qual
+                    Osbourne sofria, o Birmingham Children's Hospital e o Acorn Children's Hospice</li>
             </ul>
         </div>
         <!-- Segunda citação -->
@@ -102,20 +102,25 @@
         <!-- Imagem da banda Black Sabath -->
         <div class="img-bold">
             <figure>
-                <img src="img/foto_banda.jpg" alt="Black Sabath 1970">
+                <img src="img/Black_Sabbath_(1970).png" alt="Black Sabath 1970">
                 <figcaption>Black Sabath 1970</figcaption>
-                <img src="img/foto_banda2.jpg" alt="Foto da formação mais recente da banda">
-                <figcaption>Foto da formação mais recente da banda</figcaption>
             </figure>
         </div>
         <!-- mais informações -->
         <div class="more-info">
-            <p>
-                Você pode saber mais sobre <span class="bold">Ozzy Osbourne</span>,
-                <a href="https://pt.wikipedia.org/wiki/Ozzy_Osbourne">clicando aqui.</a>
+            <h2>Mais informações:</h2>
+            Você pode saber mais sobre <span class="bold">Ozzy Osbourne</span>,
+            <a href="https://pt.wikipedia.org/wiki/Ozzy_Osbourne">clicando aqui.</a>
             </p>
         </div>
     </div>
 </body>
+<footer>
+    <p>
+        esta página foi desenvolvida por <span class="bold">João Victor Matos</span> como forma de tributo a um
+        grande nome do Heavy Metal. <br>
+        Descanse em paz Ozzy!
+    </p>
+</footer>
 
 </html>
