Alteração no footer

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </body>
 <footer>
     <p>
-        Esta página foi desenvolvida por <span class="bold">João Victor Matos</span> como forma de tributo a um
+        Desenvolvido por <span class="bold">João Victor Matos</span> como forma de tributo a um
         grande nome do Heavy Metal. <br>
         Descanse em paz Ozzy!
     </p>
