Ajustando alinhamento do texto

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <!-- Biografia -->
         <div class="biography-container">
             <h2>Sobre sua infância</h2>
-            <p><span class="bold">John Michael Osbourne</span> nasceu em 3 de dezembro de 1948, no Maternity Hospital,
+            <p class="justify-text"><span class="bold">John Michael Osbourne</span> nasceu em 3 de dezembro de 1948, no
+                Maternity Hospital,
                 em
                 Marston Green, e cresceu em Aston, na área de Birmingham. Filho de Lilian, uma católica não
                 praticante que trabalhava em uma fábrica, e de John Thomas "Jack" Osbourne, um ferramenteiro que
@@ -38,7 +39,7 @@
                 seria "um astro do rock pelo resto da vida".
             </p>
             <h2>Começo de sua carreira</h2>
-            <P> Ozzy formou sua primeira banda, a
+            <P class="justify-text"> Ozzy formou sua primeira banda, a
                 <span class="bold">The Polka Tulk
                     Blues Band</span>, aos 19 anos de idade. Esta, que logo após se chamaria apenas "Polka Tulk" e, mais
                 tarde,
@@ -61,7 +62,7 @@
                 álbum, Never Say Die! (1978), foi o último com a formação original da banda.
             </P>
             <h2>Sobre sua carreira solo</h2>
-            <p>
+            <p class="justify-text">
                 Decidido a seguir carreira solo, ele formou o
                 <span class="bold">Blizzard of Ozz</span> juntamente com o guitarrista Randy Rhoads,
                 o baixista Bob Daisley e o baterista Lee Kerslake, sendo que o primeiro álbum, de mesmo nome, foi
@@ -75,7 +76,7 @@
                 "Você vê mais violência em um desenho do Tom & Jerry do que em um show meu. Crianças assistem um rato
                 ter seu cérebro esmagado todos os dias na TV."
             </blockquote>
-            <p>Ozzy Osbourne</p>
+            <p class="quotes-text">Ozzy Osbourne</p>
         </div>
         <!-- Curiosidades -->
         <div class="curiosities-container">
@@ -97,7 +98,7 @@
                 I'm just a dreamer <br>
                 Who dreams of better days"
             </blockquote>
-            <p>Dreamer - Ozzy Osbourne</p>
+            <p class="quotes-text">Dreamer - Ozzy Osbourne</p>
         </div>
         <!-- Imagem da banda Black Sabath -->
         <div class="img-bold">
@@ -116,7 +117,7 @@
     </div>
 </body>
 <footer>
-    <p>
+    <p class="justify-text">
         Desenvolvido por <span class="bold">João Victor Matos</span> como forma de tributo a um
         grande nome do Heavy Metal. <br>
         Descanse em paz Ozzy!
